--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ datasources:
     url: ${JDBC_URL:`jdbc:h2:mem:default;DB_CLOSE_DELAY=1;DB_CLOSE_ON_EXIT=FALSE`}
     username: ${JDBC_USER:sa}
     password: ${JDBC_PASSWORD:""}
-    driverClassName: ${JDBC_DRIVER:org.h2.driver}
+    driverClassName: ${JDBC_DRIVER:org.h2.Driver}
 
 jpa:
   default:
