--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,3 +19,7 @@ jpa:
           auto: update
         show_sql: true
         format_sql: true
+
+jackson:
+  serialization:
+    writeDatesAsTimestamps: false
